deployments/results-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: results-service
spec:
  selector:
    app: results
  ports:
    - port: 80
      targetPort: 9000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: results
spec:
  selector:
    matchLabels:
      app: results
  template:
    metadata:
      labels:
        app: results
    spec:
      containers:
        - name: results
          image: open-func
          imagePullPolicy: Never
          command: ["open-results"]
          resources:
            limits:
              memory: "256Mi"
              cpu: "1000m"
          ports:
            - containerPort: 9000
